[gd_scene load_steps=14 format=2]

[ext_resource path="res://Weapon/WeaponList/WeaponsList.tscn" type="PackedScene" id=1]
[ext_resource path="res://PickableItem/WeaponDrop.gd" type="Script" id=2]
[ext_resource path="res://Assate/Pointing_arrow.png" type="Texture" id=3]
[ext_resource path="res://Assate/Effect/dignal_blured_squear.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.172549, 0.772549, 0.964706, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="Animation" id=4]
resource_name = "default"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 11 ]
}

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.471154, 1 )
colors = PoolColorArray( 0.172549, 0.772549, 0.964706, 1, 0.172549, 0.772549, 0.964706, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 0 ), 0.0, 3.02638, 0, 0, Vector2( 0.172662, 0.981557 ), 2.28707, 2.28707, 0, 0, Vector2( 0.625899, 0.981557 ), -2.8626, -2.8626, 0, 0, Vector2( 0.978417, 0.022541 ), -2.32426, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 2
emission_box_extents = Vector3( 8, 8, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
angular_velocity = -276.16
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = -100.0
damping = 47.13
scale = 0.1
scale_curve = SubResource( 8 )
color_ramp = SubResource( 6 )
hue_variation = 1.0
hue_variation_random = 0.11

[node name="WeaponDrop" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 7, 0 )
shape = SubResource( 1 )

[node name="LifeTime" type="Timer" parent="."]
wait_time = 10.0

[node name="WeaponsList" parent="." instance=ExtResource( 1 )]

[node name="LifeTimeBar" type="ProgressBar" parent="."]
visible = false
margin_top = -16.0
margin_right = 80.0
margin_bottom = -1.0
rect_scale = Vector2( 0.2, 0.2 )
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointingSpriteAnimation" type="Sprite" parent="."]
position = Vector2( 8, -16 )
texture = ExtResource( 3 )
offset = Vector2( 0, -18 )
hframes = 4
vframes = 3
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="PointingSpriteAnimation"]
autoplay = "default"
anims/default = SubResource( 4 )

[node name="Particles2D" type="Particles2D" parent="."]
show_behind_parent = true
position = Vector2( 7, 0 )
amount = 20
process_material = SubResource( 9 )
texture = ExtResource( 4 )

[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]
